Updated userService tests